--- a/WorkoutTimer/Base.lproj/Main.storyboard
+++ b/WorkoutTimer/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="WorkoutTimer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Intervate" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -256,15 +256,18 @@
                     <connections>
                         <outlet property="exerciseCollectionView" destination="d6J-5j-EFY" id="iO5-ci-vyL"/>
                         <outlet property="intervalLabel" destination="Ae8-M1-jND" id="Dvi-Xx-vnr"/>
+                        <outlet property="intervalTitle" destination="CF4-46-N2J" id="02I-SF-utY"/>
                         <outlet property="intervalView" destination="bv8-6d-ybd" id="grt-dC-SLR"/>
                         <outlet property="navBar" destination="J3b-HB-qcu" id="a6H-bM-efQ"/>
                         <outlet property="restLabel" destination="3XI-ap-4Yn" id="kiI-Ld-ZB6"/>
+                        <outlet property="restTitle" destination="lqg-aZ-vSO" id="kxS-UC-OX8"/>
                         <outlet property="restView" destination="Aii-OY-C40" id="kJS-Rl-i4i"/>
                         <outlet property="setCollectionView" destination="nkh-tL-cwp" id="n8g-pe-h8c"/>
                         <outlet property="startButtonOutlet" destination="Ehb-Ou-OCd" id="L2k-yJ-X1G"/>
                         <outlet property="stopButtonOutlet" destination="T40-rm-wOF" id="pdk-2e-CXC"/>
                         <outlet property="timerProgress" destination="3nI-nB-5oa" id="ryh-GE-JCk"/>
                         <outlet property="transitionLabel" destination="wvM-ih-wMl" id="vc9-tg-fNY"/>
+                        <outlet property="transitionTitle" destination="9Mz-Vb-mp2" id="wrZ-A7-YW5"/>
                         <outlet property="transitionView" destination="W7A-Qf-H0T" id="l95-Rk-6UM"/>
                         <segue destination="Emh-bF-r0j" kind="presentation" identifier="mainToExerciseSegue" modalTransitionStyle="flipHorizontal" id="UvR-FY-7qA"/>
                         <segue destination="KsY-k3-I8Q" kind="presentation" identifier="mainToSetsSegue" modalPresentationStyle="overFullScreen" id="0pK-Us-tXt"/>
@@ -277,7 +280,7 @@
         <!--Add Exercise View Controller-->
         <scene sceneID="DzX-rv-rtV">
             <objects>
-                <viewController id="xw4-mn-naU" customClass="AddExerciseViewController" customModule="WorkoutTimer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="xw4-mn-naU" customClass="AddExerciseViewController" customModule="Intervate" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="12U-wR-VmJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -434,7 +437,7 @@ warning</string>
         <!--Exercise View Controller-->
         <scene sceneID="Sg6-4f-Y82">
             <objects>
-                <viewController id="Emh-bF-r0j" customClass="ExerciseViewController" customModule="WorkoutTimer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Emh-bF-r0j" customClass="ExerciseViewController" customModule="Intervate" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Uhg-EY-ffs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -510,7 +513,7 @@ warning</string>
         <!--Sets Transition And Rest View Controller-->
         <scene sceneID="bRe-mr-Cen">
             <objects>
-                <viewController id="KsY-k3-I8Q" customClass="SetsTransitionAndRestViewController" customModule="WorkoutTimer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="KsY-k3-I8Q" customClass="SetsTransitionAndRestViewController" customModule="Intervate" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mCx-XT-hXj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
