--- a/WorkoutTimer/Base.lproj/Main.storyboard
+++ b/WorkoutTimer/Base.lproj/Main.storyboard
@@ -506,6 +506,12 @@ warning</string>
                                                 <action selector="back:" destination="Emh-bF-r0j" id="zkg-c9-KY2"/>
                                             </connections>
                                         </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="Edit" id="2zg-WP-Hm7">
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <connections>
+                                                <action selector="edit:" destination="Emh-bF-r0j" id="hPC-S1-u8f"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -551,6 +557,7 @@ warning</string>
                     </view>
                     <connections>
                         <outlet property="addButton" destination="UyL-LQ-asn" id="Dc6-gG-Abk"/>
+                        <outlet property="editButton" destination="2zg-WP-Hm7" id="9TU-UQ-q8H"/>
                         <outlet property="exerciseTable" destination="Hmn-2q-sPw" id="REI-hx-lg3"/>
                         <segue destination="xw4-mn-naU" kind="presentation" identifier="exerciseToPickerSegue" id="jbe-N9-YrA"/>
                     </connections>
