--- a/WorkoutTimer/Cells/ExerciseTableViewCell.xib
+++ b/WorkoutTimer/Cells/ExerciseTableViewCell.xib
@@ -12,27 +12,27 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="exerciseTableCell" rowHeight="81" id="KGk-i7-Jjw" customClass="ExerciseTableViewCell" customModule="WorkoutTimer" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="240" height="48"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="exerciseTableCell" rowHeight="81" id="KGk-i7-Jjw" customClass="ExerciseTableViewCell" customModule="Intervate" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="240" height="42"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="206" height="47.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="206" height="41.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7uO-1P-FHi" userLabel="Exercise Cell View">
-                        <rect key="frame" x="0.0" y="0.0" width="206" height="47.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="206" height="41.5"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="TNv-Ro-jRs" userLabel="Exercise Cell Stack View">
-                                <rect key="frame" x="12" y="0.0" width="182" height="47.5"/>
+                                <rect key="frame" x="12" y="0.0" width="182" height="41.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Abs" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NRR-D1-5vy">
-                                        <rect key="frame" x="0.0" y="0.0" width="91" height="47.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="91" height="41.5"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="24"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="01:30" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lkT-5E-8a2">
-                                        <rect key="frame" x="91" y="0.0" width="91" height="47.5"/>
+                                        <rect key="frame" x="91" y="0.0" width="91" height="41.5"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="24"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -63,7 +63,7 @@
                 <outlet property="exerciseTimeLabel" destination="lkT-5E-8a2" id="B8P-8s-vzv"/>
                 <outlet property="exerciseView" destination="7uO-1P-FHi" id="pEW-I1-ag0"/>
             </connections>
-            <point key="canvasLocation" x="36" y="40.5"/>
+            <point key="canvasLocation" x="36" y="40"/>
         </tableViewCell>
     </objects>
 </document>
